--- a/FallUP/Base.lproj/LaunchScreen.storyboard
+++ b/FallUP/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina5_5" orientation="landscape">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_3" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,38 +16,38 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
+                        <rect key="frame" x="0.0" y="0.0" width="874" height="402"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="j54-ep-jpU">
-                                <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
+                                <rect key="frame" x="0.0" y="0.0" width="874" height="402"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="M0g-4h-FeT">
-                                <rect key="frame" x="248" y="143" width="240" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="M0g-4h-FeT">
+                                <rect key="frame" x="265" y="124" width="345" height="155"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="Kp8-Pk-zpS"/>
+                                    <constraint firstAttribute="width" constant="345" id="Tln-hn-ar4"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="j54-ep-jpU" firstAttribute="centerX" secondItem="M0g-4h-FeT" secondAttribute="centerX" id="7zq-Ev-Gnb"/>
-                            <constraint firstItem="M0g-4h-FeT" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="123" id="B6R-9Y-GVC"/>
-                            <constraint firstItem="M0g-4h-FeT" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Qbe-Xf-Dw3"/>
-                            <constraint firstItem="j54-ep-jpU" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="Z2x-wb-gQf"/>
-                            <constraint firstItem="M0g-4h-FeT" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="nSO-fJ-x8V"/>
-                            <constraint firstItem="j54-ep-jpU" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="t3u-w5-8zz"/>
-                            <constraint firstItem="j54-ep-jpU" firstAttribute="centerY" secondItem="M0g-4h-FeT" secondAttribute="centerY" id="zaN-Od-pyF"/>
+                            <constraint firstItem="j54-ep-jpU" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" constant="-62" id="IiW-xN-B7d"/>
+                            <constraint firstItem="M0g-4h-FeT" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Nti-sh-ueX"/>
+                            <constraint firstItem="M0g-4h-FeT" firstAttribute="centerY" secondItem="j54-ep-jpU" secondAttribute="centerY" id="OCN-lp-dBu"/>
+                            <constraint firstItem="j54-ep-jpU" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-82" id="OZo-f0-XcE"/>
+                            <constraint firstItem="M0g-4h-FeT" firstAttribute="centerX" secondItem="j54-ep-jpU" secondAttribute="centerX" id="gUb-Dw-hYS"/>
+                            <constraint firstItem="M0g-4h-FeT" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="62" id="si2-XP-Eg1"/>
+                            <constraint firstItem="M0g-4h-FeT" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="x7a-PZ-WRI"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="372.46376811594206"/>
+            <point key="canvasLocation" x="51.487414187643019" y="370.14925373134326"/>
         </scene>
     </scenes>
     <resources>
-        <image name="background" width="600" height="600"/>
-        <image name="logo" width="200" height="100"/>
+        <image name="background" width="200" height="200"/>
+        <image name="logo" width="66.666664123535156" height="33.333332061767578"/>
     </resources>
 </document>
